# libcld-comedi

./: .editorconfig  .gitignore  meson.build  meson_options.txt
examples/: async-acquisition.vala  ndev-async-acquisition.vala  polling-acquisition.vala
src/: cld-comedi-acquisition-controller.vala  cld-comedi-device.vala  cld-comedi-factory.vala  cld-comedi-task-polling.vala  cld-comedi-task-streaming.vala  cld-comedi-task.vala  cld-comedi-version.h.in  cld-comedi.map  cld-multiplexer.vala  meson.build
tests/: meson.build  test-comedi-device.vala  tests.vala
