# Performance and debugging related options
option('enable_tracing', type: 'boolean', value: false)
option('enable_profiling', type: 'boolean', value: false)

# For subproject usage
option('package_subdir', type: 'string',
       description: 'Private sub-directory used when built as a subproject')

option('enable_vala_doc',
       type: 'boolean', value: false,
       description: 'Whether to generate the API reference for CldComedi')
